run some seed tests, and add jpql instead of using filtering